--- a/data/testresources/TestSystem_Water_Dimer_def2_SVP_HF/TestSystem_Water_Dimer_def2_SVP_HF.settings
+++ b/data/testresources/TestSystem_Water_Dimer_def2_SVP_HF/TestSystem_Water_Dimer_def2_SVP_HF.settings
@@ -71,8 +71,8 @@ GRIDPOINTSORTING true
 +efield
 USE false
 ANALYTICAL false
-POS1 0 
-POS2 1 
+POS1 0 0 0 
+POS2 0 0 1 
 DISTANCE 50
 NRINGS 50
 RADIUS 1
